--- a/appendix2-T-D.qmd
+++ b/appendix2-T-D.qmd
@@ -165,7 +165,7 @@ process_line <- function(line) {
       
     # SPECIAL CASE: Hard-code line v.65 to correct apostrophe
     if (line_count == 65) {
-      return("<div style='line-height: 1.2;'>Por ceo quele estoit bele . & gente</div>")
+      return("<div style='line-height: 1.2;'><span class='line-number'>65</span>Por ceo quele estoit bele . & gente</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.131 to correct apostrophe
@@ -180,7 +180,7 @@ process_line <- function(line) {
     
     # SPECIAL CASE: Hard-code line v.350 to correct apostrophe
     if (line_count == 350) {
-      return("<div style='line-height: 1.2;'>Miex fust quil i corust feu</div>")
+      return("<div style='line-height: 1.2;'><span class='line-number'>350</span>Miex fust quil i corust feu</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.388 to correct apostrophe
@@ -205,7 +205,7 @@ process_line <- function(line) {
     
     # SPECIAL CASE: Hard-code line v.750 to correct apostrophe
     if (line_count == 750) {
-      return("<div style='line-height: 1.2;'>Quil cremoient de lor maisun</div>")
+      return("<div style='line-height: 1.2;'><span class='line-number'>750</span>Quil cremoient de lor maisun</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.973 to correct apostrophe
