--- a/appendix2-T-F1.qmd
+++ b/appendix2-T-F1.qmd
@@ -226,12 +226,12 @@ process_line <- function(line) {
     
     # SPECIAL CASE: Hard-code line v.10 to correct apostrophe
     if (line_count == 10) {
-      return("<div style='line-height: 1.2;'>e por sa amor mei escoter .</div>")
+      return("<div style='line-height: 1.2;'><span class='line-number'>10</span>e por sa amor mei escoter .</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.15 to correct spacing
     if (line_count == 15) {
-      return("<div style='line-height: 1.2;'>Quenul pecche est tant granz .</div>")
+      return("<div style='line-height: 1.2;'><span class='line-number'>15</span>Quenul pecche est tant granz .</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.36 to correct apostrophe
@@ -246,7 +246,7 @@ process_line <- function(line) {
     
     # SPECIAL CASE: Hard-code line v.65 to correct apostrophe
     if (line_count == 65) {
-      return("<div style='line-height: 1.2;'>Por co quele esteit bele & gente .</div>")
+      return("<div style='line-height: 1.2;'><span class='line-number'>65</span>Por co quele esteit bele & gente .</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.67 to correct apostrophe
@@ -261,7 +261,7 @@ process_line <- function(line) {
     
     # SPECIAL CASE: Hard-code line v.115 to correct spacing
     if (line_count == 115) {
-      return("<div style='line-height: 1.2;'>Tuit enveneient al bordal .</div>")
+      return("<div style='line-height: 1.2;'><span class='line-number'>115</span>Tuit enveneient al bordal .</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.128 to correct apostrophe
